fixed account menu alignment

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -18,7 +18,7 @@
     padding-right: 1em;
     padding-top: 0.5em;
     right: 1em;
-    top: 6.25em;
+    top: 6.54em;
     width: 300px;
     height: 384px;
     z-index: 10;
